2005-06-25  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntity.*
		* added support for the "fixed" mode, which will position the entity exactly according to its position

2005-06-25  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberSceneManager
		* removed code that forced the tile closest to the Avatar to always render with the highest LOD. this will speed up things

2005-06-25  Hagen Moebius  <hagen.moebius@starschiffchen.de>

	* src/components/ogre/widgets/ConsoleWidget.*
		* Added history browsing to the widget.
		* Added tab completion to the widget.

2005-06-25  Hagen Moebius  <hagen.moebius@starschiffchen.de>

	* src/framework/ConsoleBackend.*
		* Added history managedment to the console.

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberPhysicalEntity.cpp
		* remove the animation from the MotionManager upon deletion, so to avoid the Curse of the Segfault

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/vegetation.material: added green apple material
	* src/components/ogre/modeldefinitions/environment.modeldef.xml: added apple (which is an acorn with a green apple material)

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/Model.h, src/components/ogre/model/XMLModelDefintionSerializer.*
		* added support for particle systems
	*src/components/ogre/EmberPhysicalEntity.cpp
		* when an attribute is changed, check if this should change a particle system
	*src/components/ogre/modeldefinition/environment.modeldef.xml
		* added particles to fire
	*media/materials/textures/smoke.png
	*media/materials/textures/smokecolors.png
	*media/materials/particle/smoke.particle
	*media/materials/material/smoke.material
		* added smoke textures

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Ember.kdevelop: updated the project file
